remove todos from 4.4-5

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -624,8 +624,7 @@ These bipolynomial algebras also play a critical role in the next section.
 
 Our goal in this Lecture is to give a compact presentation of what a formal group is based on the following observation: the category of commutative cocommutative Hopf algebras of finite type over a ground field $k$ forms an abelian category.  It follows abstractly that this category admits a presentation as the module category for some (possibly noncommutative) ring, but in fact this ring and the assignment from a group scheme to linear algebraic data can both be described explicitly.  This is the subject of \textit{Dieudonn\'e theory}, and our goal is to give an overview of some of its main results, including three different presentations of the equivalence.\footnote{Emphasis on ``\emph{some of its results}''.  Dieudonn\'e theory is an enormous subject with many interesting results both internal and connected to arithmetic geometry and the theory of abelian varieties.  We will explore almost none of this.}
 
-\citeme{Weinstein's geometry of Lubin--Tate spaces notes}
-Begin with a $1$--dimensional formal group $\G$ over a ring $A$.  Our first avenue into Dieudonn\'e theory is to recall that we have previously been interested in the invariant differentials $\omega_{\G} \subseteq \Omega^1_{\G/A}$ on $\G$.  As explored in \Cref{RationalFGLsHaveLogarithms}, when $A$ is a $\Q$--algebra such differentials give rise to logarithms through integration.  On the other hand, if $A$ has positive characteristic $p$ then there is a potential obstruction to integrating terms with exponents of the form $-1 \pmod p$, and in \Cref{MfgII:LargeScales} we used this to lead us to the notion of $p$--height.  We now explore a third twist on this set-up.  Recall that $\Omega^1_{\G/A}$ forms the first level of the \textit{algebraic de Rham complex} $\Omega^*_{\G/A}$.  The de Rham complex only uses the underlying formal variety of $\G$ and not its group structure, but the product map \[\mu\co \G \times \G \to \G\] and the two projection maps \[\pi_1, \pi_2\co \G \times \G \to \G\] induce maps \[\mu^*, \pi_1^*, \pi_2^*\co C_{dR}^1(\G/A) \to C_{dR}^1(\G \times \G / A).\]  The translation invariant differentials are exactly those in the kernel of $\mu^* - \pi_1^* - \pi_2^*$, as considered at the chain level.  We can weaken this to request only that that difference be \emph{exact}, or zero at the level of cohomology of the de Rham complex.
+In the first presentation, we follow notes by Weinstein~\cite[Lecture 1]{Weinstein}.  Begin with a $1$--dimensional formal group $\G$ over a ring $A$.  Our first avenue into Dieudonn\'e theory is to recall that we have previously been interested in the invariant differentials $\omega_{\G} \subseteq \Omega^1_{\G/A}$ on $\G$.  As explored in \Cref{RationalFGLsHaveLogarithms}, when $A$ is a $\Q$--algebra such differentials give rise to logarithms through integration.  On the other hand, if $A$ has positive characteristic $p$ then there is a potential obstruction to integrating terms with exponents of the form $-1 \pmod p$, and in \Cref{MfgII:LargeScales} we used this to lead us to the notion of $p$--height.  We now explore a third twist on this set-up.  Recall that $\Omega^1_{\G/A}$ forms the first level of the \textit{algebraic de Rham complex} $\Omega^*_{\G/A}$.  The de Rham complex only uses the underlying formal variety of $\G$ and not its group structure, but the product map \[\mu\co \G \times \G \to \G\] and the two projection maps \[\pi_1, \pi_2\co \G \times \G \to \G\] induce maps \[\mu^*, \pi_1^*, \pi_2^*\co C_{dR}^1(\G/A) \to C_{dR}^1(\G \times \G / A).\]  The translation invariant differentials are exactly those in the kernel of $\mu^* - \pi_1^* - \pi_2^*$, as considered at the chain level.  We can weaken this to request only that that difference be \emph{exact}, or zero at the level of cohomology of the de Rham complex.
 
 \begin{definition}
 The \textit{cohomologically translation invariant differentials} is the $A$--submodule $PH^1_{dR}(\G/A) \subseteq H^1_{dR}(\G/A)$ defined as the kernel of $\mu^* - \pi_1^* - \pi_2^*$.
@@ -717,7 +716,7 @@ We also give a kind of non-example: $\G_a$ is \emph{not} a finite height formal 
 \begin{example}[{cf.\ \Cref{Alpha2Example}}]\label{WorkedAlpha2Example}
 Dieudonn\'e theory admits an extension to finite (flat) group schemes as well, and the torsion quotient of the Dieudonn\'e module of a formal group agrees with the Dieudonn\'e module associated to its torsion subscheme: \[D^*(\G_0[p^j]) = D^*(\G_0) / p^j.\]  For example, this gives \[D^*(\G_m[p]) = \left.\F_p\{x\} \middle/\left(\begin{array}{c} Fx = 0, \\ Vx = x \end{array}\right)\right. .\]  We extract the subgroup scheme $\alpha_2$ as the finite Dieudonn\'e quotient module $D^*(\alpha_2) = \F_2\{x\} \leftarrow D^*(\G_a)$ of the Dieudonn\'e module associated to $\G_a$ above.  We can now verify the four claims from \Cref{Alpha2Example}:
 \begin{itemize}
-\item \textit{The group scheme $\alpha_2$ has the same underlying structure ring as $\mu_2 = \mathbb{G}_m[2]$ but is not isomorphic to it.}  There are now several ways to see this, the simplest of which is that the Verschiebung operator acts nontrivially on $D^*(\mu_2)$ but wholly trivially on $D^*(\alpha_2)$.  \todo{Example 8.5 in FPFP is strongly related to this.}
+\item \textit{The group scheme $\alpha_2$ has the same underlying structure ring as $\mu_2 = \mathbb{G}_m[2]$ but is not isomorphic to it.}  There are now several ways to see this, the simplest of which is that the Verschiebung operator acts nontrivially on $D^*(\mu_2)$ but wholly trivially on $D^*(\alpha_2)$.\footnote{See also~\cite[Example 8.5]{StricklandFPFP}.}
 \item \textit{There is no commutative group scheme $G$ of rank four such that $\alpha_2 = G[2]$.}  Suppose that $G$ were such a group scheme, so that $D^*(G) / 2$ would give $D^*(\alpha_2)$.  It can't be the case that $D^*(G)$ has only $2$--torsion, since then this quotient would be a null operation, so it must be the case that $D^*(G) = \Z/4\{x\}$.  The action of both $F$ and $V$ on $x$ must vanish after quotienting by $2$, so it must be the case that $Fx = 2cx$ and $Vx = 2dx$ for some constants $c$ and $d$---but this violates $FVx = 2x$.
 \item \textit{If $E/\mathbb{F}_2$ is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence doesn't split (even after making a base change).}  This follows from calculating the action of $F$ and $V$ to get a short exact sequence of Dieudonn\'e modules: \[0 \to \F_2\{Fx\}/(F, V) \to \left.\F_2\{x, Fx\} \middle/ \left( \begin{array}{c} F^2x = 0, \\ V = 0 \end{array}\right) \right. \to \F_2\{x\}/(F, V) \to 0.\]  The exact sequence is split as $\F_2$--modules, but not as Dieudonn\'e modules.
 \item \textit{The subgroups of $\alpha_2 \times \alpha_2$ of rank two are parameterized by $\mathbb{P}^1$.}  The Dieudonn\'e module of the product is quickly computed: \[D^*(\alpha_2 \times \alpha_2) = D^*(\alpha_2) \oplus D^*(\alpha_2) = \left.\F_2\{x_1, x_2\} \middle/ \left( \begin{array}{c} F = 0, \\ V = 0 \end{array} \right) \right. .\]  An inclusion of a rank $2$ subgroup scheme corresponds to a projection of this Dieudonn\'e module onto a $1$--dimensional quotient module, and the ways to choose the kernel of this projection encompass a $\P^1$.
@@ -785,7 +784,7 @@ w_n(F_m a_*) & = \begin{cases} x_{n/m} & \text{if $m \mid n$}, \\ 0 & \text{othe
 One can use this to give an explicit description of the inverse to the covariant Dieudonn\'e functor whose existence is asserted by \Cref{CurveDieudonneTheorem}: the idea is that the evaluation map $\widehat{\W}_p \times C\G \to \G$ is surjective, and so we can recover $\G$ by imposing intertwining relations stemming from the evaluation map.  Following this through results in the following presentation: \[{D_*}^{-1}(M)(T) = \left. (\widehat{W}_p(T) \otimes_{\W_p(k)} M) \middle/ \left( \begin{array}{c} Va \otimes m = a \otimes Fm, \\ Fa \otimes m = a \otimes Vm \end{array} \right) \right. .\]
 
 We now seek to compare our two Dieudonn\'e functors.  In some sense, the comparison is inspired by an integration pairing: $D_*(\G)$ is populated by curves $\gamma$ on $\G$ and $D^*(\G)$ is populated by $1$--forms $\omega$ on $\G$, which we would like to sew together to form \[D_*(\G) \times D^*(\G) \xrightarrow{(\gamma, \omega) \mapsto \text{``$\int_\gamma \omega$''}} \W_p(k).\]
-\todo[inline]{There is more to say here.  Erick Knight suggested that there should be an alternative definition of covariant Dieudonn\'e theory also expressed by the cohomology of some sheaf, and that this will give rise to the desired duality pairing with values in some Tate-twisted ground object, which is precisely what we are looking for.}
+\todo[inline]{There is more to say here.  Can you give more intuition about how these two presentations are related, for example from Lie theory?  What curve does a cohomologically left-invariant form get sent to?  Is ``cohomologically-invariant'' analogous to ``$p$-typification'', perhaps along the lines of the ``crystalline''-ness of $H^1_{dR}$?  Can these primitives be furthermore related to the idea that taking primitive cooperations selects the additive ones? // Erick Knight suggested that there should be an alternative definition of covariant Dieudonn\'e theory also expressed by the cohomology of some sheaf, and that this will give rise to the desired duality pairing with values in some Tate-twisted ground object, which is precisely what we are looking for.  I wonder if the right thing to do is to form the bar complex on the de Rham sheaf...!}
 
 This can be made rigorous by noting the following basic but ultra-important fact about the Witt scheme:
 \begin{lemma}
@@ -810,12 +809,6 @@ There is a canonical short exact sequence \[0 \to \G_a \to \widehat{C\W}_p \xrig
 This latter sequence is a rigidified extension of $\G$ by $\G_a$, as in \Cref{ExtensionsPresentationOfDieudonne}.  The conclusion of Mazur and Messing is that this is an isomorphism.
 \end{proof}
 
-\todo{Can you give more intuition about how these two presentations are related, for example from Lie theory?  What curve does a cohomologically left-invariant form get sent to?  Is ``cohomologically-invariant'' analogous to ``$p$-typification'', perhaps along the lines of the ``crystalline''-ness of $H^1_{dR}$?  Can these primitives be furthermore related to the idea that taking primitive cooperations selects the additive ones?}
-\todo{It would be nice to talk a little bit about connected and non-connected Hopf algebras and how Dieudonn\'e theory extends across them.  This is something Goerss takes the time to compensate for and it's something that Jacob bothers with in the Hopkins--Lurie manuscript (it's the difference between $DM$ and $DM_+$ in the language of 1.4.15).}
-
-
-
-
 \begin{remark}[{\cite[Remark 18.1]{StricklandFPFP}}]
 A coordinate $x$ on $\CP^\infty_E$ induces a sequence of isomorphisms \[\CatOf{FormalGroups}(BU_E, \G) \cong \CatOf{FormalSchemes}(\CP^\infty_E, \G) \stackrel{x}{\cong} \CatOf{FormalSchemes}(\A^1, \G) = C\G,\] which presents $E^* BU$ as the Witt Hopf algebra.  However, this isomorphism is not especially interesting: for one, it is \emph{highly} dependent upon the choice of coordinate, but also the far right-hand object has no dependence on $\CP^\infty_E$, and so the operations we have been studying---formal group auto- and endomorphisms of $\CP^\infty_E$, mainly---do not act, and this isomorphism cannot be equivariant in any useful sense.
 \end{remark}
@@ -824,10 +817,7 @@ A coordinate $x$ on $\CP^\infty_E$ induces a sequence of isomorphisms \[\CatOf{F
 The contravariant Dieudonn\'e functor described above has a natural extension by choosing lifts over other pro-Artinian $k$--algebras, like the Lubin--Tate moduli stack of \Cref{LubinTateDefn}.  The resulting network of objects most naturally organizes into a sheaf over the \textit{crystalline site}, but it is possible in this setting to re-express such a sheaf as a quasi-coherent sheaf over the Lubin--Tate stack which is equipped with a flat connection, and it is additionally acted upon by the familiar operators $F$ and $V$.
 \end{remark}
 
-\begin{remark}
-\todo{pp.\ 42-43 of FPFP has some easy-to-state results about this collected.}
-\todo{Section 2.3 (pg.\ 35--36) of Morava's \textit{Noetherian Localisations} gives a sketch of the period map (in terms of curves, I guess).}
-\todo{Mention that the period map is equivariant for the isotropy action.}
+\begin{remark}[{cf. \cite[Section 2.3]{MoravaCobordismComodules}}]
 Dieudonn\'e theory gives rise to an important function called the \textit{period map}.  Although the crystalline nature of the cohomology group $H^1_{dR}$ makes our definition of $D^*$ invariant of choice of lift, the underlying chain complex is \emph{not} invariant of choice of lift.  In particular, the subsheaf of honestly invariant differentials $\omega_{\G}$ selects an interesting $1$--dimensional vector subspace of $PH^1_{dR}(\G)$~\cite[Section 2.3]{MoravaCobordismComodules}.  Thinking of $\G$ as a point in $(\moduli{fg})^\wedge_{\G_0}(\W_p(k))$, this observation gives rise to an interesting function
 \begin{align*}
 \pi_{GH}\co (\moduli{fg})^\wedge_{\G_0}(\W_p(k)) & \to \P(D^*(\G)), \\
@@ -837,12 +827,12 @@ This map has incredibly good properties.  It is equivariant for the action of $\
 \begin{itemize}
 \item The center of the $\Z_{p^2}$--points of Lubin--Tate space corresponds to the canonical lift, which is the formal group that further acquires an $\mathcal O_A$--module structure.  It has $\pi$--series $[\pi](x) = \pi x + x^{q^2}$.
 \item There are three nontrivial points in $\G[2]$: $\alpha$, $\beta$, and $\alpha + \beta$.  Quotienting by them gives three points at order $1/(q+1)$, the first bunch of ``quasicanonical lifts'', which have partial formal $\mathcal O_A$--module structures.
+\item The map $\pi_{GH}$ sends the canonical lift to $0 = [1:0]$, sends the first order quasicanonical points to $\infty = [0:1]$, and alternates from there.  The three branches of ``directions to quotient'' carve $\mathbb P^1$ up into three lobes.  This is because $\pi_{GH}$ is equivariant for \emph{isogenies}, and quotienting by one of these order $2$ subgroups is a lift of the Frobenius isogeny on the residue formal group.
 \item Out to order $1/q$, $\pi_{GH}$ is injective.
 \item You can compute these orders using the Newton polygon associated to the $\pi$--series.
 \item At each quasicanonical point, you also also form three quotients: two of them make the situation ``worse'', and one of them makes the situation ``better'', which is a kind of witness to the identification $\G / \G[2] \cong \G$.
 \item The canonical Frobenius $F_{can} = \left[ \begin{array}{cc} 0 & p \\ 1 & 0 \end{array} \right]$ first flips the two coordinates (and scales one by $p$), then flips them back (and scales the other by $p$), and after two flips scaling everything by $p$ scales back down by homogeneous coordinates.
 \item The group $\F_4^\times$ acts by rotation on $\mathbb P^1$.
-\item The map $\pi_{GH}$ sends the canonical lift to $0 = [1:0]$, sends the first order quasicanonical points to $\infty = [0:1]$, and alternates from there.  The three branches of ``directions to quotient'' carve $\mathbb P^1$ up into three lobes.  This is because $\pi_{GH}$ is equivariant for \emph{isogenies}, and quotienting by one of these order $2$ subgroups is a lift of the Frobenius isogeny on the residue formal group.
 \item These quasicanonical points are the ones with nontrivial stabilizers under the action by the Morava stabilizer group---all the other points belong to free orbits.  The canonical lift has the largest stabilizer of all.
 \end{itemize}
 \end{remark}
@@ -1120,11 +1110,6 @@ The results of this Lecture are accessed from a different perspective by Hopkins
 
 
 
-\todo{Jeremy asked whether there was a connection between Goerss's original proof and the free $E_2$--algebra with $p$ killed which we keep dancing around this semester.  I don't know, and it's a good question.}
-
-
-
-
 
 
 
@@ -1202,7 +1187,6 @@ The following claims give a complete description of the Morava $K$--theory schem
 \begin{enumerate}
     \item The formal scheme $(\OS{H(S^1[p^\infty])}{q})_K$ is a formal variety of dimension $\binom{d-1}{q-1}$.
     \item Suppose that $(\OS{H(S^1[p^\infty])}{q-1})_K$ is a $p$--divisible formal group of height $\binom{d}{q-1}$ and dimension $\binom{d-1}{q-1}$, that $(\OS{H(S^1[p])}{q-1})_K$ models its $p$--torsion, and that the cup product induces an isomorphism \[\theta^{q-1}\co \Q / \Z_{(p)} \otimes D(\OS{H(S^1[p^\infty])}{1})^{\wedge (q-1)} \to D(\OS{H(S^1[p^\infty])}{q-1}),\] where $D(G)$ denotes the Dieudonn\'e module associated to $K_0(G)$ for $K_*(G) = K_0(G) \otimes_k K_*$ a $p$--divisible Hopf algebra.  The same claims are then true with $q-1$ replaced everywhere by $q$.
-    \todo{Look into whether you \emph{really} need this funny system (cf.\ Notation 2.4.3) and this tensor with $\Q / \Z_{(p)}$.}
     \item Consider the model $\Q / \Z_{(p)} \cong S^1[p^\infty]$ for the $p$--primary part of the circle group.  Suppose that for each $j$, the short exact sequence of groups \[0 \to \frac{1/p^j \cdot \Z_{(p)}}{\Z_{(p)}} \to \frac{\Q}{\Z_{(p)}} \to \frac{\Q}{1/p^j \cdot \Z_{(p)}} \to 0\] induces a short exact sequence of group-schemes upon applying $(\OS{H(-)}{q-1})_K$.  The sequence of group schemes under $(\OS{H(-)}{q})_K$ is then also short-exact.
 \end{enumerate}
 \end{theorem}
