clean up todos from 4.6

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1255,19 +1255,11 @@ Although the method of starting with the $j = \infty$ case and deducing from it 
 \end{remark}
 
 \begin{remark}
-\Cref{MainKThyOfEMSpacesTheorem} has a statement in the language of \Cref{UnstableAlgebraicModelSection}.  Rather than forming the algebraic approximation $\AA(K, H) = K_*(\CP^\infty)_{K_*[H_*]}^{\circulatearrows}[H_* \CP^\infty]$ as usual, we form the modified version \[\AA_{p^j}(K, H) = K_*(\OS{H(S^1[p^j])}{1})_{K_*[H_*]}^{\circulatearrows}[H_* \OS{H(S^1[p^j])}{1}].\]  Using the same unstable Kronecker pairing, this supports a natural map to $K_* \OS{H}{*}$, and a summary of this Lecture's results is that it is an isomorphism.
-\todo{Is this really right? I want this remark to explain the presence of odd-degree E--M spaces in this calculation, and I don't think I've exactly done that.}
+\Cref{MainKThyOfEMSpacesTheorem} has a statement in the language of \Cref{UnstableAlgebraicModelSection}.  Rather than forming the algebraic approximation $\AA(K, H) = K_*(\CP^\infty)_{K_*[H_*]}^{\circulatearrows}[H_* \CP^\infty]$ as usual, we form the modified version \[\AA_{p^j}(K, H) = K_*(\OS{H(S^1[p^j])}{1})_{K_*[H_*]}^{\circulatearrows}[H_* \OS{H(S^1[p^j])}{1}].\]  Using the same unstable Kronecker pairing, this supports a natural map to $K_* \OS{H}{*}$, and a summary of this Lecture's results is that it is an isomorphism.  In particular, this auxiliary approximation makes use of \emph{odd}--dimensional Eilenberg--Mac Lane spaces.
 \end{remark}
 
 
 
-
-
-
-
-
-\todo{Maybe talk about some consequences: the Hopkins--Ravenel--Wilson results on finite Postnikov towers and so on?}
-\todo{I was thinking that this would give a counterexample to the idea that the additive unstable cooperations always present the functions on the scheme of homomorphisms, but now I see that this example works too.  As lazy evidence, I think counting the ranks of $Q^* K(d)_* \OS{H\Z/p}{*}$ and $\InternalHom{FormalGps}(\Gamma_d, \G_a)$ (using Dieudonn\'e theory, or using Callan's tangent space trick) gives the same number.  More seriously, I think if you write out the scheme of homomorphisms, you'll see enough things degenerate (because $[-1]_{\G_a}(x) = -x$) that you do get this alternating algebra.}
 
 
 
