fix broken references

--- a/finite.tex
+++ b/finite.tex
@@ -748,7 +748,7 @@ The main result about this infinitesimal space $(\moduli{fg})^\wedge_\Gamma$ is 
 Suppose that $\height \Gamma < \infty$ for $\Gamma$ a formal group over $k$ a perfect field of positive characteristic $p$.  The functor $(\moduli{fg})^\wedge_\Gamma$ is valued in essentially discrete groupoids, and it is naturally equivalent to a smooth formal scheme over $\W_p(k)$ of dimension $(\height(\Gamma) - 1)$.
 \end{theorem}
 
-\begin{remark}[{\cite[Theorem 4.35]{Zink}}]
+\begin{remark}[{\cite[Theorem 4.35]{ZinkCartierTheory}}]
 The presence of the \textit{$p$--local Witt ring} $\W_p(k)$ is explained by its universal property: for $k$ as above and $R$ an infinitesimal thickening of $k$, $\W_p(k)$ has the lifting property\footnote{Rings with such lifting properties are generally called \textit{Cohen rings.}  In the case that $k$ is a perfect field of positive characteristic $p$, the Witt ring $\W_p(k)$ happens to model a Cohen ring for $k$.}
 \begin{center}
 \begin{tikzcd}
