--- a/mo.tex
+++ b/mo.tex
@@ -373,7 +373,7 @@ from which it follows that \[\Delta \xi_m = \sum_{i+j=m} \xi_i^{2^j} \otimes \xi
 There is an isomorphism \[\mathcal A_* = \F_2[\xi_1, \xi_2, \ldots, \xi_j, \ldots].\]
 \end{theorem}
 \begin{proof}[Flippant proof]
-There is at least a map $\F_2[\xi_1, \xi_2, \ldots] \to \mathcal A_*$ given by the definition of the elements $\xi_j$ above.  This map is injective, since these elements are distinguished by how they coact on $\HFtwo^* \RP^\infty$.  Then, since these rings are of graded finite type, Milnor can conclude his argument by counting how many elements he has produced, comparing against how many Adem and Cartan found (which we will do ourselves in \Cref{UnstableSteenrodCoops}), and noting that he has exactly enough.
+There is at least a map $\F_2[\xi_1, \xi_2, \ldots] \to \mathcal A_*$ given by the definition of the elements $\xi_j$ above.  This map is injective, since these elements are distinguished by how they coact on $\HFtwo^* \RP^\infty$.  Then, since these rings are of graded finite type, Milnor can conclude his argument by counting how many elements he has produced, comparing against how many Adem and Cartan found (which we will do ourselves in \Cref{UnstableContextsSection}), and noting that he has exactly enough.
 \end{proof}
 
 We are now in a position to uncover the desired map $\alpha^*$ from earlier.  In order to retell Milnor's story with $\HFtwo P$ in place of $\HFtwo$, note that there is a topological construction involving $\HFtwo$ from which $\mathcal A_*$ emerges: \[\mathcal A_* := \pi_*(\HFtwo \sm \HFtwo).\]  Performing substitution on this formula gives the periodified dual Steenrod algebra: \[\mathcal AP_0 := \pi_0 (\HFtwo P \sm \HFtwo P) = \HFtwo P_0(\HFtwo P) = \mathcal A_*[\xi_0^\pm].\]
