--- a/quillen.tex
+++ b/quillen.tex
@@ -560,7 +560,7 @@ with $|\xi_j| = 2p^j-2$ and $|\tau_j| = 2p^j - 1$. \qed
 \end{theorem}
 \noindent There are odd--dimensional classes in this algebra, and the \emph{graded-commutativity} of the dual mod--$p$ Steenrod algebra means that these classes anti-commute.  This prohibits us both from writing ``$\Spec(\HFp_* \HFp)$'' and from trusting ``$\Spec(\HFp P_0 \HFp)$'' to do a good enough job.  This is the first time we have encountered Hindrance \#\ref{SkewCommutativeDeficiency} from \Cref{TheSteenrodAlgebraSection} in the wild.
 
-Because of this, we will not feel any guilt for taking a completely alternative approach to this calculation.  This other method, due to Quillen, has as its keystone a completely different kind of cohomology operation called a \textit{power operation}.  These operations are quite technical to describe, but at their core is taking the $n${\th} power of a cohomology class---and hence they have a frustrating lack of properties, including failures to be additive and to be stable.  Our goal in this Lecture is just to define these cohomology operations, specialized to the particular setting we will need for Quillen's proof.  Unlike with Steenrod squares, their algebro-geometric interpretation will not be immediately accessible to us, and indeed their eventual reinterpretation in these terms are one of the more hard-won pursuits in this subfield (cf.\ \Cref{PowerOpnsChapter}).
+Because of this, we will not feel any guilt for taking a completely alternative approach to this calculation.  This other method, due to Quillen, has as its keystone a completely different kind of cohomology operation called a \textit{power operation}.  These operations are quite technical to describe, but at their core is taking the $n${\th} power of a cohomology class---and hence they have a frustrating lack of properties, including failures to be additive and to be stable.  Our goal in this Lecture is just to define these cohomology operations, specialized to the particular setting we will need for Quillen's proof.  Unlike with Steenrod squares, their algebro-geometric interpretation will not be immediately accessible to us, and indeed their eventual reinterpretation in these terms are one of the more hard-won pursuits in this subfield (cf.\ \Cref{PowerOpnsSection}).
 
 Power operations arise not just from taking the $n${\th} power of a cohomology class but from also remarking on the natural symmetry of that operation.  We record this symmetry using the following technical apparatus:
 \begin{lemma}[{\cite[Examples 6.1.4.2 and 6.1.6.2]{LurieHA}}]
