--- a/main.bib
+++ b/main.bib
@@ -1594,6 +1594,22 @@ MRREVIEWER = {Douglas C. Ravenel},
   year = {2007}
 }
 
+@incollection {MoravaMotivicThomIso,
+    AUTHOR = {Morava, Jack},
+     TITLE = {The motivic {T}hom isomorphism},
+ BOOKTITLE = {Elliptic cohomology},
+    SERIES = {London Math. Soc. Lecture Note Ser.},
+    VOLUME = {342},
+     PAGES = {265--285},
+ PUBLISHER = {Cambridge Univ. Press, Cambridge},
+      YEAR = {2007},
+   MRCLASS = {55N22 (11G09 14F42 57R77)},
+  MRNUMBER = {2330517},
+MRREVIEWER = {Mark Hovey},
+       DOI = {10.1017/CBO9780511721489.014},
+       URL = {http://dx.doi.org/10.1017/CBO9780511721489.014},
+}
+
 @article {Morton,
     AUTHOR = {Morton, Dena S. Cowen},
      TITLE = {The {H}opf ring for {$b{\rm o}$} and its connective covers},
